fix search product layout shift

--- a/src/components/ProductCards/ProductCards.scss
+++ b/src/components/ProductCards/ProductCards.scss
@@ -1,6 +1,7 @@
 @import '../../utils/variables.scss';
 
 .products {
+  min-height: 350px;
   margin-top: $margin-top-lg;
   display: flex;
   justify-content: center;
